Fix: Adicionando overflow a tag pre

--- a/css/styles.css
+++ b/css/styles.css
@@ -47,13 +47,16 @@ h1 ,h2 ,h3 ,h4 ,h5 ,h6 {
   padding: 8px;
 }
 
-pre {
+.code-formated {
+  display: inline-block;
   font-family: 'Source Code Pro', monospace;
   font-size: 16px;
+  width: 100%;
 
   background-color: rgb(54, 54, 54);
   color: rgba(255, 255, 255, 0.822);
   margin: 10px 0;
   padding: 10px;
   border-radius: 5px;
+  overflow-x: auto;
 }
